<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/text_color_white"
    android:elevation="5dp"
    android:gravity="center"
    android:minWidth="250dp"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/text_color_white"
        android:minWidth="245dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/info_window_bank_name"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/bankName"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="XXXX"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/info_window_bank_code"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/bankCode"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="XXXX"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dee0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/info_window_Add"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/bankAdd"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="XXXX"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/info_window_contact_number"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/bankContact"
                    fontPath="fonts/Roboto-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="XXXX"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <!--</android.support.v7.widget.CardView>-->
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-5dp"
        android:src="@null"
        android:tint="#fff" />

</LinearLayout>